--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">SHIFT WeatherApp</string>
     <string name="temp_format">%1$.1f ℃</string>
-    <string name="temp_feels_format">Ощущается как %1$.1f ℃</string>
-    <string name="humidity_format">Влажность: %1$.1f</string>
-    <string name="pressure_format">Давление: %1$d кПа</string>
+    <string name="temp_feels_format">Feels like %1$.1f ℃</string>
+    <string name="humidity_format">Humidity: %1$.1f</string>
+    <string name="pressure_format">Pressure: %1$d kPa</string>
     <string name="retry">Retry</string>
     <string name="something_went_wrong">Something went wrong</string>
-    <string name="network_error">Something went wrong...</string>
+    <string name="network_error">Something went wrong…</string>
 </resources>
